# openclaw-facebook

./: .dockerignore  .fallowrc.json  .gitignore  AGENTS.md  NIGHTLY_CONVERSATION_WORK_LOG.md  README.md  api.ts  channel-plugin-api.ts  configured-state.test.ts  configured-state.ts  dj-shortcut-facebook-2026.5.10-beta.1.tgz  fly.toml  index.ts  manifest.test.ts  openclaw-facebook-2026.5.10-beta.1.tgz  openclaw.plugin.json  package-lock.json  package.json  pnpm-lock.yaml  runtime-api.ts  setup-entry.ts  tsconfig.json  vitest.config.mjs  vitest.node-polyfill.mjs
.github/: dependabot.yml
apps/customer-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/customer-app/src-tauri/capabilities/: default.json
apps/customer-app/src-tauri/src/: lib.rs  main.rs
docs/: audit-recommendations.md  clawhub-listing.md  clawhub.md  cost-control-plan.md  face-memory.md  facebook-complete-tutorial.md  leaderbot-portal.md  migration.md  monorepo.md  openclaw-update.md  operator-prompt-routing.md  production-readiness.md  setup.md  trpc-api.md  x-twitter-companion.md  x-twitter-getxapi-companion.md
examples/: channels.facebook.json5  env.example  facebook-tweetclaw-companion.json5  multi-page.json5  public-leaderbot.json5
scripts/: check-product-boundaries.mjs  image-gen-migration-smoke-workflow.test.mjs  messenger-smoke-checklist.mjs  messenger-smoke-checklist.test.mjs  normalize-fallow-report.mjs  openclaw-login.mjs  run-vitest.mjs  update-openclaw.mjs  update-openclaw.test.mjs  validate-openclaw-runtime.mjs  validate-release-versions.mjs
src/: accounts.test.ts  accounts.ts  probe.ts  (+41 more)
(+436 files in other folders)
