[package]
name = "leaderbot_customer_app"
version = "0.1.0"
description = "Leaderbot customer portal"
authors = ["Leaderbot"]
edition = "2021"
license = "MIT"

[lib]
name = "leaderbot_customer_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
